# sptfy

./: .gitignore  LICENSE  README.md  pyproject.toml
sptfy/: clients.py  endpoints.py  errors.py  oauth.py  sync.py  types.py  utils.py
tests/: conftest.py  test_oauth.py
tests/async/: test_transformers_async.py
tests/helpers/: test_utils.py
tests/oauth/: test_authorization_code.py  test_backend_auth.py  test_cache.py  test_credentials.py  test_credentials_flow.py  test_oauth_token.py
tests/sync/: test_common_endpoint.py  test_playlists_endpoint.py  test_tracks_endpoint.py  test_transformers.py
