[tool.poetry]
name = "sptfy"
version = "0.1.0"
description = "A small wrapper library for the Spotify API"
authors = ["Arthur Diniz <arthurvdinizs@gmail.com>", "Eduardo Macedo <eduzemacedo@gmail.com>"]
readme = "README.md"

license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
responses = "^0.12.1"
mypy = "^0.770"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
